ripple effect added

--- a/app/src/main/res/layout/list_item_search_channel.xml
+++ b/app/src/main/res/layout/list_item_search_channel.xml
@@ -5,6 +5,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:foreground="?attr/selectableItemBackground"
+    android:clickable="true"
     android:orientation="horizontal"
     android:paddingTop="@dimen/user_item_top_padding">
 
