--- a/app/src/main/res/layout/list_item_search_user.xml
+++ b/app/src/main/res/layout/list_item_search_user.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:foreground="?attr/selectableItemBackground"
+    android:clickable="true"
     android:orientation="horizontal"
     android:paddingTop="@dimen/user_item_top_padding">
 
