--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,42 +20,42 @@
             app:navigationIcon="@drawable/ic_back" />
     </android.support.design.widget.AppBarLayout>
 
-    <com.devspark.robototextview.widget.RobotoTextView
-        style="@style/SettingsElement"
+    <TextView
         android:id="@+id/btn_edit_profile"
+        style="@style/SettingsElement"
         android:layout_width="match_parent"
         android:layout_height="@dimen/settings_element_height"
         android:layout_marginTop="@dimen/small"
         android:drawableEnd="@drawable/ic_forward_shevron"
+        android:fontFamily="@string/font_light"
         android:gravity="center_vertical"
         android:paddingEnd="@dimen/normal"
         android:paddingStart="@dimen/normal"
-        android:text="@string/edit_profile"
-        app:typeface="roboto_light" />
+        android:text="@string/edit_profile" />
 
-    <com.devspark.robototextview.widget.RobotoSwitch
+    <android.support.v7.widget.SwitchCompat
         android:id="@+id/sw_show_unread_messages"
         style="@style/SettingsElement"
         android:layout_width="match_parent"
         android:layout_height="@dimen/settings_element_height"
         android:layout_gravity="center_vertical|end"
         android:layout_marginTop="@dimen/margin_settings_elements"
-        app:typeface="roboto_light"
+        android:fontFamily="@string/font_light"
         android:paddingEnd="@dimen/normal"
         android:paddingStart="@dimen/normal"
         android:text="@string/unread_messages"
-        android:theme = "@style/SwitchStyle"/>
+        android:theme="@style/SwitchStyle" />
 
-    <com.devspark.robototextview.widget.RobotoTextView
-        style="@style/SettingsElement"
+    <TextView
         android:id="@+id/btn_setting_logout"
+        style="@style/SettingsElement"
         android:layout_width="match_parent"
-        android:layout_marginTop="@dimen/small"
         android:layout_height="@dimen/settings_element_height"
+        android:layout_marginTop="@dimen/small"
+        android:fontFamily="@string/font_light"
+        android:gravity="center_vertical"
         android:paddingEnd="@dimen/normal"
         android:paddingStart="@dimen/normal"
-        android:gravity="center_vertical"
-        android:text="@string/logout"
-        app:typeface="roboto_light" />
+        android:text="@string/logout" />
 
 </LinearLayout>
