--- a/app/src/main/res/layout/list_item_search_channel.xml
+++ b/app/src/main/res/layout/list_item_search_channel.xml
@@ -53,7 +53,7 @@
             </TableRow>
         </TableLayout>
 
-        <com.devspark.robototextview.widget.RobotoTextView
+        <TextView
             android:id="@+id/tv_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -66,11 +66,10 @@
             android:maxLines="2"
             android:ellipsize="end"
             android:textColor="@color/textlink_disabled"
-            app:typeface="roboto_regular"
             tools:text="This is a very simple and short message, which you can see in preview"
             android:textSize="@dimen/list_item_secondary_text" />
 
-        <com.devspark.robototextview.widget.RobotoTextView
+        <TextView
             android:id="@+id/tv_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -80,11 +79,10 @@
             android:lines="1"
             android:maxLines="1"
             android:textColor="@color/textlink_disabled"
-            app:typeface="roboto_regular"
             android:textSize="@dimen/search_item_date_text_size"
             tools:text="03:53 PM"/>
 
-        <com.devspark.robototextview.widget.RobotoTextView
+        <TextView
             android:id="@+id/tv_channel_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -96,7 +94,6 @@
             android:maxLines="1"
             android:ellipsize="end"
             android:textColor="@color/textListPrimary"
-            app:typeface="roboto_regular"
             android:textSize="@dimen/list_item_heading_text"
             tools:text="#cool_chat"/>
 
