--- a/app/src/main/res/layout/activity_search_chat.xml
+++ b/app/src/main/res/layout/activity_search_chat.xml
@@ -16,13 +16,11 @@
 
         <com.devspark.robototextview.widget.RobotoEditText
             android:id="@+id/et_search"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_3x"
             app:typeface="roboto_regular"
-            android:textSize="@dimen/search_chat_toolbar_text_size"
-            android:hint="@string/search_with_ellipsis"
-            android:textColorHint="@color/tabUnSelected"
-            android:layout_gravity="start"
+            style="@style/SearchEditText"
             android:background="@null"/>
 
         <ImageButton
