Add placeholder for list empty state

--- a/app/src/main/res/layout/activity_added_members.xml
+++ b/app/src/main/res/layout/activity_added_members.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -22,14 +21,26 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_added_members"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginEnd="@dimen/dialog_create_channel_content_offset"
-        android:layout_marginStart="@dimen/dialog_create_channel_content_offset"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_added_members"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingEnd="@dimen/dialog_create_channel_content_offset"
+            android:paddingStart="@dimen/dialog_create_channel_content_offset"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/text_empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/no_users_to_display" />
+
+    </FrameLayout>
+
+</android.support.design.widget.CoordinatorLayout>
