--- a/app/src/main/res/layout/people_new_channel_item.xml
+++ b/app/src/main/res/layout/people_new_channel_item.xml
@@ -5,6 +5,8 @@
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
     android:paddingBottom="@dimen/pending_people_item_bottom_margin"
+    android:paddingEnd="@dimen/list_item_margin"
+    android:paddingStart="@dimen/list_item_margin"
     android:paddingTop="@dimen/pending_people_item_top_margin">
 
     <ImageView
@@ -32,4 +34,5 @@
         android:background="@null"
         android:button="@drawable/bg_pending_member_item"
         android:clickable="false" />
+
 </LinearLayout>
