UI changes. UI for Invite New Member implemented

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_email"
             android:ellipsize="end"
-            android:hint="@string/email"
+            android:hint="@string/enter_your_email"
             android:inputType="textEmailAddress"
             android:maxLines="1"
             android:text="@string/default_login_text" />
