--- a/app/src/main/res/layout/activity_restore_password.xml
+++ b/app/src/main/res/layout/activity_restore_password.xml
@@ -40,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_email"
-            android:hint="@string/email"
+            android:hint="@string/enter_your_email"
             android:inputType="textEmailAddress"
             android:maxLines="1"
             android:ellipsize="end"
