saving update channel added

--- a/app/src/main/res/layout/activity_create_group_or_channel.xml
+++ b/app/src/main/res/layout/activity_create_group_or_channel.xml
@@ -74,6 +74,7 @@
                 app:typeface="roboto_light" />
 
             <com.devspark.robototextview.widget.RobotoTextView
+                android:id="@+id/add_members_text"
                 style="@style/TextHeadingSecondary.Small.Capitalize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
