--- a/app/src/main/res/layout/fragment_search_chat.xml
+++ b/app/src/main/res/layout/fragment_search_chat.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-
-    <com.devspark.robototextview.widget.RobotoTextView
+    <TextView
         android:visibility="gone"
+        tools:visibility="visible"
         android:id="@+id/tv_empty_state"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,13 +15,12 @@
         android:textColor="@color/textlink_disabled"
         android:textSize="@dimen/text_title_size"
         android:gravity="center"
+        android:fontFamily="sans-serif"
         android:text="@string/no_results_found_try_again"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_items"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
-
 
 </LinearLayout>
