--- a/app/src/main/res/layout/content_post_other.xml
+++ b/app/src/main/res/layout/content_post_other.xml
@@ -65,7 +65,7 @@
             android:paddingStart="@dimen/list_item_chat_padding"
             android:paddingTop="@dimen/list_item_chat_padding_timestamp">
 
-            <com.vanniktech.emoji.EmojiTextView
+            <com.applikey.mattermost.views.ContentTextView
                 android:id="@+id/tv_reply_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -82,7 +82,7 @@
                 tools:text="User Message"
                 tools:visibility="visible"/>
 
-            <com.vanniktech.emoji.EmojiTextView
+            <com.applikey.mattermost.views.ContentTextView
                 android:id="@+id/tv_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
