--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -66,7 +66,7 @@
             android:visibility="gone"
             tools:visibility="visible">
 
-            <com.vanniktech.emoji.EmojiTextView
+            <com.applikey.mattermost.views.ContentTextView
                 android:id="@+id/tv_reply_message"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
