--- a/app/src/main/res/layout/list_item_chat.xml
+++ b/app/src/main/res/layout/list_item_chat.xml
@@ -85,7 +85,7 @@
             android:textColor="@color/textListSecondary"
             android:textSize="@dimen/list_item_secondary_text" />
 
-        <com.vanniktech.emoji.EmojiTextView
+        <com.applikey.mattermost.views.ContentTextView
             android:id="@+id/tv_message_preview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
