--- a/app/src/main/res/layout/content_post_my.xml
+++ b/app/src/main/res/layout/content_post_my.xml
@@ -33,6 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/list_item_chat_time_margin"
+            android:autoLink="web"
             android:drawablePadding="@dimen/small"
             android:drawableStart="@drawable/line"
             android:ellipsize="end"
@@ -49,6 +50,7 @@
             android:id="@+id/tv_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:autoLink="web"
             android:fontFamily="sans-serif-light"
             android:textColor="@android:color/white"
             android:textSize="@dimen/list_item_chat_text_size"
