--- a/app/src/main/res/layout/content_post_other.xml
+++ b/app/src/main/res/layout/content_post_other.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     tools:showIn="@layout/list_item_post_other">
 
@@ -16,20 +16,20 @@
             android:id="@+id/iv_preview_image"
             android:layout_width="@dimen/list_item_image_chat"
             android:layout_height="@dimen/list_item_image_chat"
-            android:src="@drawable/no_resource"/>
+            android:src="@drawable/no_resource" />
 
         <ImageView
             android:id="@+id/iv_status_bg"
             android:layout_width="14dp"
             android:layout_height="14dp"
-            android:src="@drawable/no_resource_round_background"/>
+            android:src="@drawable/no_resource_round_background" />
 
         <ImageView
             android:id="@+id/iv_status"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_margin="2dp"
-            android:src="@drawable/no_resource_round"/>
+            android:src="@drawable/no_resource_round" />
 
     </FrameLayout>
 
@@ -51,13 +51,13 @@
             android:maxLines="1"
             android:textColor="@color/textListPrimary"
             android:textSize="@dimen/list_item_chat_text_size"
-            tools:text="Name"/>
+            tools:text="Name" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/list_item_chat_time_margin"
             android:layout_marginBottom="@dimen/list_item_chat_time_margin"
+            android:layout_marginTop="@dimen/list_item_chat_time_margin"
             android:background="@drawable/bg_post"
             android:orientation="vertical"
             android:paddingBottom="@dimen/list_item_chat_padding_timestamp"
@@ -70,6 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/list_item_chat_time_margin"
+                android:autoLink="web"
                 android:drawablePadding="@dimen/small"
                 android:drawableStart="@drawable/line"
                 android:ellipsize="end"
@@ -77,20 +78,21 @@
                 android:maxLines="1"
                 android:textColor="@color/textListPrimary"
                 android:textSize="@dimen/text_primary_button"
-                app:emojiSize="@dimen/emoji_size"
                 android:visibility="gone"
+                app:emojiSize="@dimen/emoji_size"
                 tools:text="User Message"
-                tools:visibility="visible"/>
+                tools:visibility="visible" />
 
             <com.applikey.mattermost.views.ContentTextView
                 android:id="@+id/tv_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:autoLink="web"
                 android:fontFamily="sans-serif-light"
                 android:textColor="@color/textListPrimary"
                 android:textSize="@dimen/list_item_chat_text_size"
                 app:emojiSize="@dimen/emoji_size"
-                tools:text="Some message"/>
+                tools:text="Some message" />
 
         </LinearLayout>
 
@@ -102,7 +104,7 @@
             android:fontFamily="sans-serif-light"
             android:textColor="@color/textListSecondary"
             android:textSize="@dimen/list_item_chat_date_size"
-            tools:text="11:12 AM"/>
+            tools:text="11:12 AM" />
 
     </LinearLayout>
 
