--- a/app/src/main/res/layout/list_item_group_chat.xml
+++ b/app/src/main/res/layout/list_item_group_chat.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
     android:foreground="?attr/selectableItemBackground"
     android:clickable="true"
     android:orientation="vertical"
