--- a/app/src/main/res/layout/list_item_search_user.xml
+++ b/app/src/main/res/layout/list_item_search_user.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:foreground="?attr/selectableItemBackground"
+    android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:orientation="horizontal"
     android:paddingEnd="@dimen/list_item_margin"
@@ -26,5 +26,4 @@
             android:maxLines="1"
             android:textColor="@color/textListPrimary"
             android:textSize="@dimen/list_item_heading_text" />
-
 </LinearLayout>
