fix emoji line height

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -133,7 +133,7 @@
                 android:inputType="textCapSentences|textMultiLine"
                 android:maxLines="3"
                 android:textColorHint="@color/textSecondary"
-                app:emojiSize="@dimen/emoji_size" />
+                app:emojiSize="@dimen/emoji_input_size" />
 
             <ImageView
                 android:id="@+id/iv_emoji"
