--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -115,4 +115,6 @@
     <dimen name="button_width">180dp</dimen>
     <dimen name="emoji_size">18sp</dimen>
     <dimen name="emoji_input_size">22sp</dimen>
+
+    <dimen name="send_message_field_max_height">112dp</dimen>
 </resources>
