--- a/app/src/main/res/layout/activity_create_group_or_channel.xml
+++ b/app/src/main/res/layout/activity_create_group_or_channel.xml
@@ -124,13 +124,25 @@
                 android:text="@string/button_add_all"
                 android:textAlignment="gravity" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_peoples"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/tv_empty_state"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/small"
+                    android:text="@string/search_user_empty_state"
+                    android:visibility="gone" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_peoples"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </FrameLayout>
         </LinearLayout>
-
-
     </android.support.v4.widget.NestedScrollView>
-
 </LinearLayout>
