--- a/app/src/main/res/layout/activity_invite_new_member.xml
+++ b/app/src/main/res/layout/activity_invite_new_member.xml
@@ -1,126 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              tools:context=".activities.InviteNewMemberActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:title="@string/invite_new_member_capt"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:theme="@style/AppToolbar"
-                app:navigationIcon="@drawable/ic_back"
-                app:contentInsetStartWithNavigation="48dp"
-                app:elevation="2dp"/>
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:theme="@style/AppToolbar"
+            android:title="@string/invite_new_member_capt"
+            app:contentInsetStartWithNavigation="48dp"
+            app:elevation="2dp"
+            app:navigationIcon="@drawable/ic_back" />
     </android.support.design.widget.AppBarLayout>
 
-    <RelativeLayout
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        tools:context=".activities.InviteNewMemberActivity">
+
+        <RelativeLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingStart="@dimen/activity_horizontal_margin_fixed_text"
             android:paddingEnd="@dimen/activity_horizontal_margin_fixed_text"
+            android:paddingStart="@dimen/activity_horizontal_margin_fixed_text"
             android:paddingTop="@dimen/activity_vertical_margin">
 
-        <TextView
+            <TextView
                 android:id="@+id/tv_email"
                 style="@style/TextHeadingSecondary.Small.Capitalize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingStart="@dimen/edit_text_align"
-                android:paddingEnd="@dimen/edit_text_align"
                 android:layout_alignStart="@+id/et_email"
-                android:textAllCaps="true"
-                android:text="@string/email"/>
+                android:paddingEnd="@dimen/edit_text_align"
+                android:paddingStart="@dimen/edit_text_align"
+                android:text="@string/email"
+                android:textAllCaps="true" />
 
-        <EditText
+            <EditText
                 android:id="@+id/et_email"
                 style="@style/EditTextPrimary.PushRight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_email"
+                android:ellipsize="end"
                 android:hint="@string/enter_your_email"
                 android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:ellipsize="end"/>
+                android:maxLines="1" />
 
-        <TextView
+            <TextView
                 android:id="@+id/tv_first_name"
                 style="@style/TextHeadingSecondary.Small.Capitalize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/invite_screen_item_margin"
-                android:paddingStart="@dimen/edit_text_align"
-                android:paddingEnd="@dimen/edit_text_align"
-                android:textAllCaps="true"
-                android:text="@string/first_name"
                 android:layout_alignStart="@+id/et_email"
-                android:layout_below="@+id/et_email"/>
+                android:layout_below="@+id/et_email"
+                android:layout_marginTop="@dimen/invite_screen_item_margin"
+                android:paddingEnd="@dimen/edit_text_align"
+                android:paddingStart="@dimen/edit_text_align"
+                android:text="@string/first_name"
+                android:textAllCaps="true" />
 
-        <EditText
+            <EditText
                 android:id="@+id/et_first_name"
                 style="@style/EditTextPrimary.PushRight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/tv_first_name"
+                android:ellipsize="end"
                 android:hint="@string/first_name"
                 android:inputType="text"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:layout_below="@+id/tv_first_name"
-                android:layout_alignParentEnd="true"/>
+                android:maxLines="1" />
 
-        <TextView
+            <TextView
                 android:id="@+id/tv_last_name"
                 style="@style/TextHeadingSecondary.Small.Capitalize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/invite_screen_item_margin"
-                android:paddingStart="@dimen/edit_text_align"
-                android:paddingEnd="@dimen/edit_text_align"
-                android:textAllCaps="true"
                 android:layout_alignStart="@+id/et_email"
+                android:layout_below="@+id/et_first_name"
+                android:layout_marginTop="@dimen/invite_screen_item_margin"
+                android:paddingEnd="@dimen/edit_text_align"
+                android:paddingStart="@dimen/edit_text_align"
                 android:text="@string/last_name"
-                android:layout_below="@+id/et_first_name"/>
+                android:textAllCaps="true" />
 
-        <EditText
+            <EditText
                 android:id="@+id/et_last_name"
                 style="@style/EditTextPrimary.PushRight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_last_name"
+                android:ellipsize="end"
                 android:hint="@string/last_name"
                 android:inputType="text"
-                android:maxLines="1"
-                android:ellipsize="end"/>
+                android:maxLines="1" />
 
-        <TextView
+            <TextView
                 android:id="@+id/tv_invite_info"
-                android:layout_marginTop="@dimen/invite_screen_content_margin_top"
-                android:layout_below="@id/et_last_name"
-                android:gravity="center"
-                android:text="@string/invitation_info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-        <com.applikey.mattermost.views.SafeButton
-                android:id="@+id/b_invite_new_member"
-                style="@style/Button"
-                android:layout_marginStart="@dimen/edit_text_align"
-                android:layout_marginEnd="@dimen/edit_text_align"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
+                android:layout_below="@id/et_last_name"
+                android:layout_marginTop="@dimen/invite_screen_content_margin_top"
+                android:gravity="center"
+                android:text="@string/invitation_info" />
+
+            <com.applikey.mattermost.views.SafeButton
+                android:id="@+id/b_invite_new_member"
+                style="@style/Button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_invite_info"
+                android:layout_marginEnd="@dimen/edit_text_align"
+                android:layout_marginStart="@dimen/edit_text_align"
                 android:layout_marginTop="@dimen/margin_default"
-                android:text="@string/send_invitation_capt"/>
-    </RelativeLayout>
+                android:text="@string/send_invitation_capt" />
+        </RelativeLayout>
+    </ScrollView>
 </LinearLayout>
