--- a/app/src/main/res/drawable/bg_pending_member_item.xml
+++ b/app/src/main/res/drawable/bg_pending_member_item.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_checked="true"
-        android:drawable="@drawable/ic_check"/>
+        android:drawable="@drawable/selector_check"/>
 
     <item
         android:state_checked="false"
