--- a/app/src/main/res/layout/list_item_team.xml
+++ b/app/src/main/res/layout/list_item_team.xml
@@ -15,6 +15,7 @@
         android:drawableEnd="@drawable/ic_forward_shevron"
         android:drawablePadding="@dimen/image_button_padding"
         android:layout_marginTop="16dp"
+        android:fontFamily="@string/font_light"
         android:layout_marginBottom="16dp"
         android:maxLines="1"
         android:textSize="@dimen/spinner_text_size" />
