add empty state

--- a/app/src/main/res/layout/activity_find_more_channels.xml
+++ b/app/src/main/res/layout/activity_find_more_channels.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
@@ -17,16 +17,31 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:theme="@style/AppToolbar"
-            app:contentInsetStartWithNavigation="48dp"
             android:title="@string/find_more_channels"
+            app:contentInsetStartWithNavigation="48dp"
             app:navigationIcon="@drawable/ic_back" />
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_more_channels"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        tools:listitem = "@layout/list_item_more_channels"/>
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_more_channels"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            tools:listitem="@layout/list_item_more_channels" />
+
+        <TextView
+            android:id="@+id/tv_empty_state"
+            style="@style/EmptyState"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/empty_state_margin_top"
+            android:text="@string/empty_state"
+            android:visibility="gone"
+            tools:visibility="visible" />
+    </FrameLayout>
 
 </LinearLayout>
