--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -116,7 +116,7 @@
     <dimen name="button_text_size">14sp</dimen>
     <dimen name="button_height">40dp</dimen>
     <dimen name="button_width">180dp</dimen>
-    <dimen name="fragment_search_empty_state_margin_top">100dp</dimen>
+    <dimen name="empty_state_margin_top">100dp</dimen>
     <dimen name="emoji_size">18sp</dimen>
     <dimen name="emoji_input_size">22sp</dimen>
     <dimen name="list_element_text_size">18sp</dimen>
