--- a/app/src/main/res/layout/activity_added_members.xml
+++ b/app/src/main/res/layout/activity_added_members.xml
@@ -14,7 +14,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:theme="@style/AppToolbar"
+            android:theme="@style/SearchViewBar"
             app:navigationIcon="@drawable/ic_back">
 
         </android.support.v7.widget.Toolbar>
