--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,9 +10,16 @@
     <style name="Button" parent="Widget.AppCompat.Button.Borderless.Colored">
         <item name="android:clickable">true</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:foreground">?android:attr/selectableItemBackground</item>
+        <item name="android:foreground">?android:attr/selectableItemBackgroundBorderless</item>
         <item name="android:background">@drawable/round_button_gradient</item>
         <item name="android:textSize">@dimen/text_primary_button</item>
+    </style>
+
+    <style name="GrayButton" parent="Button">
+        <item name="android:paddingStart">@dimen/normal</item>
+        <item name="android:paddingEnd">@dimen/normal</item>
+        <item name="android:minWidth">@dimen/button_width</item>
+        <item name="background">@drawable/round_button_gray</item>
     </style>
 
     <style name="AppToolbar" parent="Base.ThemeOverlay.AppCompat.Light">
@@ -111,5 +118,5 @@
         <item name="android:layout_gravity">start</item>
         <item name="android:textColor">@color/textlink_enabled</item>
     </style>
-    
+
 </resources>
