leave button added

--- a/app/src/main/res/layout/activity_channel_details.xml
+++ b/app/src/main/res/layout/activity_channel_details.xml
@@ -78,6 +78,14 @@
             android:layout_margin="@dimen/normal"
             android:text="@string/edit_channel" />
 
+        <Button
+            android:id="@+id/btn_leave_channel"
+            style="@style/BorderlessButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/leave_channel" />
+
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
