--- a/app/src/main/res/layout/fragment_search_chat.xml
+++ b/app/src/main/res/layout/fragment_search_chat.xml
@@ -11,9 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/empty_state_margin_top"
-        android:text="@string/empty_state"
-        android:visibility="gone"
-        tools:visibility="visible" />
+        android:text="@string/empty_state" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_items"
