progress and delete confirmation dialogs added, layout paddings fixed;

--- a/app/src/main/res/layout/activity_create_group_or_channel.xml
+++ b/app/src/main/res/layout/activity_create_group_or_channel.xml
@@ -94,8 +94,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/added_people_layout_item_height"
                 android:layout_marginBottom="@dimen/normal"
-                android:layout_marginEnd="@dimen/list_item_margin"
-                android:layout_marginStart="@dimen/list_item_margin"
+                android:layout_marginEnd="@dimen/more"
+                android:layout_marginStart="@dimen/more"
                 android:layout_marginTop="@dimen/large"
                 app:min_item_right_margin="@dimen/added_people_layout_item_right_margin" />
 
