Refactored ChatActivity xml Extract some layout to include tag Added join to chat logic

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,4 +7,8 @@
     <declare-styleable name="MaxHeightScrollView">
         <attr name="maxHeight" format="dimension" />
     </declare-styleable>
+
+    <declare-styleable name="ImageViewCompat">
+        <attr name="backgroundColorState" format="reference|color" />
+    </declare-styleable>
 </resources>
