--- a/app/src/main/res/layout/activity_restore_password.xml
+++ b/app/src/main/res/layout/activity_restore_password.xml
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginTop="@dimen/margin_default"
-            android:text="@string/restore_password_capt" />
+            android:text="@string/forgot_password" />
 
     </RelativeLayout>
 </RelativeLayout>
