--- a/app/src/main/res/layout/list_item_chat.xml
+++ b/app/src/main/res/layout/list_item_chat.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
     android:background="?attr/selectableItemBackground"
     android:foreground="?attr/selectableItemBackground"
-    android:clickable="true"
+    android:clickable="true">
+
+    <LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -20,8 +24,8 @@
             android:id="@+id/iv_preview_image_layout"
             android:layout_width="@dimen/list_item_image"
             android:layout_height="@dimen/list_item_image"
-            android:layout_marginLeft="@dimen/list_item_margin"
-            android:layout_marginRight="@dimen/list_item_margin">
+            android:layout_marginLeft="@dimen/margin_default"
+            android:layout_marginRight="@dimen/margin_default">
 
             <ImageView
                 android:id="@+id/iv_preview_image"
@@ -107,3 +111,5 @@
         android:layout_height="1dp"
         android:background="@color/separator_list" />
 </LinearLayout>
+
+</FrameLayout>
