--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,7 +23,7 @@
     <dimen name="margin_default">16dp</dimen>
 
     <dimen name="user_avatar_right_margin">20dp</dimen>
-    <dimen name="user_item_top_padding">20dp</dimen>
+    <dimen name="user_item_vertical_padding">10dp</dimen>
 
     <dimen name="small">8dp</dimen>
     <dimen name="normal">16dp</dimen>
