--- a/app/src/main/res/layout/list_item_chat.xml
+++ b/app/src/main/res/layout/list_item_chat.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.internal.ForegroundLinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="wrap_content"
     android:layout_width="wrap_content"
-    android:background="?attr/selectableItemBackground"
+    android:layout_height="wrap_content"
+    android:clickable="true"
     android:foreground="?attr/selectableItemBackground"
-    android:clickable="true">
-
-    <LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -110,6 +105,4 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/separator_list" />
-</LinearLayout>
-
-</FrameLayout>
+</android.support.design.internal.ForegroundLinearLayout>
