LinearLayout changed to foregroundLinearLayout in user layout

--- a/app/src/main/res/layout/list_item_search_user.xml
+++ b/app/src/main/res/layout/list_item_search_user.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.internal.ForegroundLinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
@@ -27,4 +28,4 @@
             android:maxLines="1"
             android:textColor="@color/textListPrimary"
             android:textSize="@dimen/list_item_heading_text" />
-</LinearLayout>
+</android.support.design.internal.ForegroundLinearLayout>
